NEW/src/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    @apply text-white bg-[#1c1c1c] overflow-x-hidden;

    body {
      @apply overflow-x-hidden;
    }
  }

  header {
    @apply lg:px-60 sm:px-5 py-5;
  }

  main {
    @apply lg:px-60 sm:px-5 w-full;
    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
  }

  a {
    @apply cursor-pointer;
  }
}

@layer components {
  .block {
    @apply bg-[#414141] h-1/3 w-[100vw] absolute z-40;

    &:nth-child(1) {
      @apply top-0;
    }

    &:nth-child(2) {
      @apply top-1/3;
    }

    &:nth-child(3) {
      @apply bottom-0;
    }
  }

  .logo {
    @apply w-1/3 sm:hidden;
  }
}

